Gap between dropdown and header fixed

--- a/public/less/main.less
+++ b/public/less/main.less
@@ -300,7 +300,7 @@ input, textarea, select {
           border-radius: 0;
           opacity: 1;
           background-color: #222;
-          top: 66px;
+          top: 65px;
           left: auto;
           position: fixed;
           & > li > a {
